--- a/test/build.gradle
+++ b/test/build.gradle
@@ -18,4 +18,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
 
+    // https://mvnrepository.com/artifact/io.netty/netty-all
+    compile group: 'io.netty', name: 'netty-all', version: '4.1.34.Final'
+
+
 }
