--- a/build.gradle
+++ b/build.gradle
@@ -3,23 +3,36 @@
  */
 
 plugins {
-    id 'java'
+    id 'java' 
     id 'maven-publish'
+    id 'org.springframework.boot' version '2.1.3.RELEASE'
 }
 
-repositories {
-    mavenLocal()
-    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
-    maven {
-        url = 'http://repo.maven.apache.org/maven2'
+
+allprojects {
+    repositories {
+        mavenLocal()
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+        maven {
+            url = 'http://repo.maven.apache.org/maven2'
+        }
+
     }
     
-
 }
+
 
 group = 'com.lfm'
 version = '1.0-SNAPSHOT'
-sourceCompatibility = '1.8'
+sourceCompatibility = JavaVersion.VERSION_11
+
+
+
+
+dependencies{
+
+
+}
 
 publishing {
     publications {
