--- a/quick-start/build.gradle
+++ b/quick-start/build.gradle
@@ -1,16 +1,7 @@
-plugins {
-    id 'java'
-    id 'org.springframework.boot' version '2.1.3.RELEASE'
-  
-}
+apply from: "${rootProject.projectDir}/boot-module.gradle"
 
 group 'com.lfm'
 version '1.0-SNAPSHOT'
-
-sourceCompatibility = JavaVersion.VERSION_11
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
 bootJar {
     mainClassName = 'com.lfm.boot.MainApplication'
@@ -24,6 +15,9 @@ dependencies {
         exclude module: 'spring-boot-starter-tomcat'
     }
     compile  'org.springframework.boot:spring-boot-starter-undertow'
+
+    compile( project( ':swagger-starter' ) )
+    
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
