--- a/boot-module.gradle
+++ b/boot-module.gradle
@@ -2,3 +2,19 @@ apply from: "${rootProject.projectDir}/java-module.gradle"
 
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+
+//buildscript {
+//    repositories {
+//        maven {
+//            url "https://plugins.gradle.org/m2/"
+//        }
+//    }
+//    dependencies {
+//        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.1.3.RELEASE"
+//    }
+//}
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR1"
+    }
+}
