--- a/quick-start/src/main/resources/application.yml
+++ b/quick-start/src/main/resources/application.yml
@@ -2,3 +2,15 @@ server:
   port: 9090
 swagger2:
   basePackage: com.lfm.boot
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:5050/eureka/
+spring:
+  application:
+    name: quick-start
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
