--- a/java-module.gradle
+++ b/java-module.gradle
@@ -5,5 +5,6 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_11
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
 }
