--- a/server-feign/build.gradle
+++ b/server-feign/build.gradle
@@ -4,8 +4,7 @@ group 'com.lfm'
 version '1.0-SNAPSHOT'
 
 bootJar {
-    mainClassName = 'com.lfm.boot.QuickStartApplication'
-    launchScript()
+    mainClassName = 'com.lfm.api.gateway.ApiGatewayApplication'
 }
 repositories {
     mavenCentral()
@@ -15,15 +14,11 @@ dependencies {
     compile ('org.springframework.boot:spring-boot-starter-web'){
         exclude module: 'spring-boot-starter-tomcat'
     }
+
+    compile  'org.springframework.boot:spring-boot-starter-actuator'
     compile  'org.springframework.boot:spring-boot-starter-undertow'
-
-    compile( project( ':swagger-starter' ) )
-//
-//    // https://mvnrepository.com/artifact/de.codecentric/spring-boot-admin-starter-client
-    compile group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.1.4'
-
-    compile  'org.springframework.boot:spring-boot-starter-security'
     compile  'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    compile  'org.springframework.cloud:spring-cloud-starter-openfeign'
     compile  'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
