--- a/server-gateway/build.gradle
+++ b/server-gateway/build.gradle
@@ -4,8 +4,7 @@ group 'com.lfm'
 version '1.0-SNAPSHOT'
 
 bootJar {
-    mainClassName = 'com.lfm.boot.QuickStartApplication'
-    launchScript()
+    mainClassName = 'com.lfm.api.gateway.ApiGatewayApplication'
 }
 repositories {
     mavenCentral()
@@ -24,6 +23,6 @@ dependencies {
 
     compile  'org.springframework.boot:spring-boot-starter-security'
     compile  'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    compile  'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
+    compile  'org.springframework.cloud:spring-cloud-starter-netflix-zuul'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
