--- a/quick-start/build.gradle
+++ b/quick-start/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile  'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     compile  'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
