--- a/monitor-turbine/build.gradle
+++ b/monitor-turbine/build.gradle
@@ -10,13 +10,13 @@ bootJar {
 repositories {
     mavenCentral()
 }
-
+configurations {
+    compile.exclude module: 'spring-boot-starter-tomcat'
+}
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     
-    compile ('org.springframework.boot:spring-boot-starter-web'){
-        exclude module: 'spring-boot-starter-tomcat'
-    }
+    compile 'org.springframework.boot:spring-boot-starter-web'
     compile  'org.springframework.boot:spring-boot-starter-undertow'
     compile  'org.springframework.boot:spring-boot-starter-actuator'
 //    compile  'org.springframework.boot:spring-boot-starter-security'
