--- a/admin-server/build.gradle
+++ b/admin-server/build.gradle
@@ -10,6 +10,9 @@ bootJar {
 repositories {
     mavenCentral()
 }
+configurations {
+    compile.exclude module: 'spring-boot-starter-tomcat'
+}
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
@@ -17,9 +20,8 @@ dependencies {
     // https://mvnrepository.com/artifact/de.codecentric/spring-boot-admin-starter-server
     compile group: 'de.codecentric', name: 'spring-boot-admin-starter-server', version: '2.1.4'
 
-    compile ('org.springframework.boot:spring-boot-starter-web'){
-        exclude module: 'spring-boot-starter-tomcat'
-    }
+    compile ('org.springframework.boot:spring-boot-starter-web')
+
     compile  'org.springframework.boot:spring-boot-starter-undertow'
 
     compile  'org.springframework.boot:spring-boot-starter-security'
