--- a/hybrid-quartz/build.gradle
+++ b/hybrid-quartz/build.gradle
@@ -10,11 +10,11 @@ bootJar {
 repositories {
     mavenCentral()
 }
-
+configurations {
+    compile.exclude module: 'spring-boot-starter-tomcat'
+}
 dependencies {
-    compile ('org.springframework.boot:spring-boot-starter-web'){
-        exclude module: 'spring-boot-starter-tomcat'
-    }
+    compile ('org.springframework.boot:spring-boot-starter-web')
     compile  'org.springframework.boot:spring-boot-starter-undertow'
     compile  'org.springframework.boot:spring-boot-starter-quartz'
 
