--- a/monitor-server/build.gradle
+++ b/monitor-server/build.gradle
@@ -10,13 +10,14 @@ bootJar {
 repositories {
     mavenCentral()
 }
-
+configurations {
+    compile.exclude module: 'spring-boot-starter-tomcat'
+}
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     
-    compile ('org.springframework.boot:spring-boot-starter-web'){
-        exclude module: 'spring-boot-starter-tomcat'
-    }
+    compile ('org.springframework.boot:spring-boot-starter-web')
+
     compile  'org.springframework.boot:spring-boot-starter-undertow'
    
     compile  'org.springframework.boot:spring-boot-starter-security'
