--- a/test/build.gradle
+++ b/test/build.gradle
@@ -20,7 +20,17 @@ dependencies {
     compile group: 'com.google.zxing', name: 'javase', version: '3.4.0'
     
     compile 'io.jsonwebtoken:jjwt-api:0.10.5'
-    
+
+    // https://mvnrepository.com/artifact/org.redisson/redisson
+    compile 'org.redisson:redisson:3.11.0'
+
+    // https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core
+    compile group: 'org.mybatis.generator', name: 'mybatis-generator-core', version: '1.3.7'
+
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
+
+
     runtime 'io.jsonwebtoken:jjwt-impl:0.10.5',
             // Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
             //'org.bouncycastle:bcprov-jdk15on:1.60',
