--- a/java-module.gradle
+++ b/java-module.gradle
@@ -6,5 +6,7 @@ sourceCompatibility = JavaVersion.VERSION_11
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
 }
