--- a/test/build.gradle
+++ b/test/build.gradle
@@ -22,7 +22,9 @@ dependencies {
     compile 'io.jsonwebtoken:jjwt-api:0.10.5'
 
     // https://mvnrepository.com/artifact/org.redisson/redisson
-    compile 'org.redisson:redisson:3.11.0'
+    compile 'org.redisson:redisson:3.11.6'
+
+    compile 'io.lettuce:lettuce-core:5.2.1.RELEASE'
 
     // https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core
     compile group: 'org.mybatis.generator', name: 'mybatis-generator-core', version: '1.3.7'
